<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planner_gazebo_demo</name>
  <version>0.0.0</version>
  <description>Task 15 Stage 3: Gazebo simulation with Ackermann car model and planner integration.</description>
  <maintainer email="tfy@todo.todo">tfy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>controller_manager</depend>
  <depend>ackermann_steering_controller</depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros>
      <plugin_name>gazebo_ros2_control</plugin_name>
    </gazebo_ros>
  </export>
</package>